@@ -15,8 +15,10 @@
  * <ul>
  * <li><b>integer</b> A 32-bit signed integer data type.</li>
  * <li><b>float</b> A double-precision floating point number data type.</li>
- * <li><b>date</b> A date data type.</li>
  * <li><b>string</b> A string data type.</li>
+ * <li><b>date</b> A date data type.</li>
+ * <li><b>time</b> A time data type (available since version 1.0.5).</li>
+ * <li><b>datetime</b> A date and time data type (available since version 1.0.5).</li>
  * </ul>
  *
  * For <b>date</b> type, the property {@link dateFormat}
@@ -32,15 +34,30 @@ class CTypeValidator extends CValidator
 {
 	/**
 	 * @var string the data type that the attribute should be. Defaults to 'string'.
-	 * Valid values include 'string', 'integer', 'float' and 'date'.
+	 * Valid values include 'string', 'integer', 'float', 'date', 'time' and 'datetime'.
+	 * Note that 'time' and 'datetime' have been available since version 1.0.5.
 	 */
 	public $type='string';
 	/**
 	 * @var string the format pattern that the date value should follow. Defaults to 'MM/dd/yyyy'.
-	 * Please see {@link CDateParser} for details about how to specify a date format.
+	 * Please see {@link CDateTimeParser} for details about how to specify a date format.
 	 * This property is effective only when {@link type} is 'date'.
 	 */
 	public $dateFormat='MM/dd/yyyy';
+	/**
+	 * @var string the format pattern that the time value should follow. Defaults to 'hh:mm'.
+	 * Please see {@link CDateTimeParser} for details about how to specify a time format.
+	 * This property is effective only when {@link type} is 'time'.
+	 * @since 1.0.5
+	 */
+	public $timeFormat='hh:mm';
+	/**
+	 * @var string the format pattern that the datetime value should follow. Defaults to 'MM/dd/yyyy hh:mm'.
+	 * Please see {@link CDateTimeParser} for details about how to specify a datetime format.
+	 * This property is effective only when {@link type} is 'datetime'.
+	 * @since 1.0.5
+	 */
+	public $datetimeFormat='MM/dd/yyyy hh:mm';
 	/**
 	 * @var boolean whether the attribute value can be null or empty. Defaults to true,
 	 * meaning that if the attribute is empty, it is considered valid.
@@ -64,7 +81,11 @@ class CTypeValidator extends CValidator
 		else if($this->type==='float')
 			$valid=preg_match('/^[-+]?([0-9]*\.)?[0-9]+([eE][-+]?[0-9]+)?$/',trim($value));
 		else if($this->type==='date')
-			$valid=CDateParser::parse($value,$this->dateFormat)!==false;
+			$valid=CDateTimeParser::parse($value,$this->dateFormat)!==false;
+	    else if($this->type==='time')
+			$valid=CDateTimeParser::parse($value,$this->timeFormat)!==false;
+	    else if($this->type==='datetime')
+			$valid=CDateTimeParser::parse($value,$this->datetimeFormat)!==false;
 		else
 			return;
 
