@@ -16,6 +16,7 @@ Version 1.0.5 to be released
 - New #211: Enhanced AR by supporting lazy relational query with on-the-fly query parameters (Qiang)
 - New #247: Added support to allow using Web services in PHP versions lower than 5.2.0 (Qiang)
 - New #254: Added support to allow input widgets to be used with tabular inputs (Qiang)
+- New #265: Added support to validate time and datetime inputs (Qiang)
 - New: Deprecated CHtml::getActiveId() (Qiang)
 - New: Added CDbCriteria::mergeWith() (Qiang)
 - New: Added Oracle support for Active Record (Ricardo)
